Added install script and updated README